config {
    info {
        description = 'Redis Input/Output Tools'
        inceptionYear = '2020'
        vendor = 'Redis'
        tags = ['redis', 'data', 'import', 'export', 'generator', 'file', 'sql', 'replication']
        links {
            website = 'https://github.com/redis-developer/${project.rootProject.name}'
            issueTracker = 'https://github.com/redis-developer/${project.rootProject.name}/issues'
            scm = 'https://github.com/redis-developer/${project.rootProject.name}.git'
        }
        scm {
            url = "https://github.com/redis-developer/${project.rootProject.name}"
            connection = "scm:git:https://github.com/redis-developer/${project.rootProject.name}.git"
            developerConnection = "scm:git:git@github.com:redis-developer/${project.rootProject.name}.git"
        }
        specification {
            enabled = true
        }
        implementation {
            enabled = true
        }
        people {
            person {
                id = 'jruaux'
                name = 'Julien Ruaux'
                roles = ['developer', 'author']
            }
        }
        publishing {
            signing {
                enabled = true
            }
        }
    }
    licensing {
        enabled = false
        licenses {
            license {
                id = 'Apache-2.0'
            }
        }
    }
    docs {
        javadoc {
            autoLinks {
                enabled = false
            }
        }
        sourceHtml {
            enabled = false
        }
    }
    coverage {
        jacoco {
            toolVersion = '0.8.8'
        }
    }
}

allprojects {
    repositories {
        gradlePluginPortal()
        mavenCentral()
        mavenLocal()
    }
    tasks.withType(GenerateModuleMetadata) {
        enabled = false
    }
}

subprojects {
    config {
        info {
            description = project.project_description
        }
	    coverage {
	        jacoco {
	            toolVersion = '0.8.8'
	        }
	    }        
    }

    license {
        exclude('build/**')
    }
    
    dependencies {
        compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: jsr305Version
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    }
    
    test {
        useJUnitPlatform()
    }

    bootJar {
        enabled = false
    }

    jar {
        enabled = true
        archiveClassifier = ''
    }

    configurations {
        all*.exclude module: 'spring-boot-starter-logging'
    }
    
    sourceCompatibility = 8
    targetCompatibility = 8

    asciidoctor {
	    inProcess = JAVA_EXEC
	    forkOptions {
	        jvmArgs("--add-opens","java.base/sun.nio.ch=ALL-UNNAMED","--add-opens","java.base/java.io=ALL-UNNAMED")
	    }
	    resources {
	    	from("$rootDir/core/riot-core/src/docs/resources/images") {
	     		include '**/*'
	   		}
	    }
	    baseDirFollowsSourceFile()
	    attributes \
        'icons': 'font',
        'docinfo1': '',
        'includedir': "$rootDir/core/riot-core/src/docs/asciidoc",
        'sectanchors': 'true',
        'source-highlighter': 'coderay',
        'coderay-linenums-mode': 'table',
        'test-resources': "$projectDir/src/test/resources",
        'toc': 'left',
        'numbered': 'true',
        'linkattrs': 'true',
        'linkcss': 'true',
        'project-name': project.name,
        'project-title': config.info.description
	}
}
